# VibeLedger

./: .env.example  .gitignore  CLAUDE.md  README.md  dashboard_app.py  dashboard_lib.py  dev_plan.md  project_plan.md  pyproject.toml
analytics/: account_timeline_60d.py  balance_by_type_lines.py  category_charts.py
app/: main.py
app/api/: routes.py
app/core/: auth.py  config.py
app/db/: schema_patches.py  session.py
app/models/: models.py
app/schemas/: connect.py  plaid.py
app/services/: category_resolver.py  connect_service.py  plaid_client.py  scheduler.py  security.py  sync_service.py  transfer_detector.py
pages/: 1_Accounts.py  2_Cashflow.py  3_Categories.py  4_Transfers.py  5_Rules.py
scripts/: backup_db.sh  connect_funnel.sh
tests/: conftest.py  test_analytics_contracts.py  test_auth.py  test_category_resolver.py  test_category_rules_api.py  test_connect_flow.py  test_connect_payload_contracts.py  test_connect_service.py  test_health.py  test_plaid_endpoints.py  test_scheduler.py  test_security.py  test_sync_and_annotations.py  test_sync_service.py  test_transaction_routes.py  test_transfer_detector.py  test_transfers_api.py
