[project]
name = "vibeledger"
version = "0.1.0"
description = "Personal finance ledger with Plaid ingestion"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "cryptography>=42.0.0",
  "plaid-python>=16.0.0",
  "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
